5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1756_1576.log
== TEST (2019-05-27 14:36:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("EUSAPIA: ")))
v2 = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(v1)):
	if(a[i]==11) and (b[i] ==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:13) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(v1)):
	if(a[i]==11) and (b[i] ==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:24) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i] ==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:51) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:51) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:38:04) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:39:17) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:40:10) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1

print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:12:41) 
-- CODE:
from numpy import *
a = array(eval(input("EUSAPIA: ")))
b = array(eval(input("BARSANULFO: ")))

i = 0 #VARIAVEL
eu = 0 #ACUMULA POntos de esaupisia
ba = 0 #acumula pontos de barsa

while(i<size(a)):
	if(a[i]==11) and (b[i]==22): #barsanulfo
		ba = ba + 1
		print("BARSANULFO")
	elif(a[i]==11) and (b[i]==33): #eusapisia
		eu = eu + 1
		print("EUSAPIA")
	elif(a[i]==22) and (b[i]==11):
		eu = eu + 1
		print("EMPATE")

print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:13:21) 
-- CODE:
from numpy import*
v1 = array(eval(input("v1:")))
v2 = array(eval(input("v2:")))
i = 0 #contadora posição vetores
j = 0 #contadora eusapia
k = 0 #contadora barsanulfo
while(i<size[v1])
-- ERROR:
File "XXXX", line 7
    while(i<size[v1])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:14:01) 
-- CODE:
from numpy import*
vet1 = array(eval(input("v1:")))
vet2 = array(eval(input("v2:")))
i = 0 #contadora posição vetores
j = 0 #contadora eusapia
k = 0 #contadora barsanulfo
while(i<size[vet1])
-- ERROR:
File "XXXX", line 7
    while(i<size[vet1])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:07) 
-- CODE:
from numpy import*
vet1 = array(eval(input("v1:")))
vet2 = array(eval(input("v2:")))
i = 0 #contadora posição vetores
j = 0 #contadora eusapia
k = 0 #contadora barsanulfo
while(i<size[vet1])
-- ERROR:
File "XXXX", line 7
    while(i<size[vet1])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
